# real-time-rendering-in-curved-spaces

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh
src/: graphics.cpp  main.cpp  main_openGL.cpp  main_webGL.cpp  scene.cpp
src/framework/: framework.h  frameworkMath.h  geometry.cpp  geometry.h  globalConstants.cpp  globalConstants.h  gpuProgram.cpp  gpuProgram.h  hyperMaths.h  shader.cpp  shader.h  texture.cpp  texture.h
src/non-euclidean/: curvature.cpp  curvature.h  geomCamera.cpp  geomCamera.h  nonEuclidean.h  nonEuclideanMath.h
src/shaders/: geom.frag  geom.vert
